# PredictPhagePPI

./: .gitignore  PhagesDB_Data.txt  PhagesDB_accession_numbers.txt  README.md  phylogeny.ipynb  pyproject.toml  sourcing_data.ipynb  ~$Random Forest Performances.xlsx
PreditctPhage/: .RData  .Rhistory  PreditctPhage.qmd  _quarto.yml
PreditctPhageR/: PreditctPhage.Rproj
notebooks/: k_nearest_neighbor.ipynb  neural_network.ipynb  neural_network_kmers.ipynb  neural_network_minhash.ipynb  nn_kmers_script.py  nn_torch.ipynb  nn_torch_full.ipynb  nn_torch_pairwise.ipynb  random_forest.ipynb  sourcing_data.ipynb
outdated_notebooks/: neural_network_minhash.ipynb
scripts/: analysis.py  data_generators.py  io_operations.py  manipulations.py  push_kmer_comp.py  run_kmer_comp.sh  simpleffnn.py  torchmlp.py
scripts/PredictPhagePPI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/algo_code/: data_preprocess.sh  hobohm.c  hobohm_1.py  nohup.out  purgelogs.sh  run_ffnn.sh  run_nnalign.sh  run_xycorr.sh  test_ffnn.py  test_nnalign.py  train_ffnn.py  train_nnalign.py  xycorr
scripts_ext/: 0_ConcatFasta.sh  CleanFasta.sh  ConcatFasta.sh  random_forest_iter.py
