[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PredictPhagePPI"
version = "0.1.0"
description = "Predicting bacteriophage interaction with bacteria, given their genomes and a hostrange interaction"

readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Asbjorn Victor Hansen", email = "s215045@student.dtu.dk" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "scripts"}

[tool.setuptools.packages.find]
where = ["scripts"]
